fix duplicated games in bookmark
