# controllers/bookmarkController.go
@@ -37,16 +37,17 @@ func ShowUserBookmark(c *gin.Context) {
 }
 
 // Bookmark godoc
-// @Summary Bookmarked games
+// @Summary Bookmark a games
 // @Description User add games to bookmark
-// @Tags Users
+// @Tags Games
 // @Param Authorization header string true "Authorization. How to input in swagger : 'Bearer <insert_your_token_here>'"
 // @Security BearerToken
 // @Produce json
 // @Param id path string true "Game Id"
 // @Success 200 {object} models.Bookmark
-// @Router /users/games/{id}/add-to-bookmark [patch]
+// @Router /games/{id}/bookmark [post]
 func AddGameToBookmark(c *gin.Context) {
+	db := c.MustGet("db").(*gorm.DB)
 	//check authorization
 	cUser, _ := models.GetCurrentUser(c)
 	if cUser.Role != "user" {
@@ -54,12 +55,24 @@ func AddGameToBookmark(c *gin.Context) {
 		return
 	}
 
-	db := c.MustGet("db").(*gorm.DB)
+	var userBookmarks []models.Bookmark
+	if err := db.Where("user_id = ?", cUser.ID).Find(&userBookmarks).Error; err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Record Not Found"})
+		return
+	}
 
 	var game models.Game
 	if err := db.Where("id = ?", c.Param("id")).First(&game).Error; err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record Not Found", "err": c.Param("id")})
 		return
+	}
+
+	// check if this game already in current users bookmark
+	for _, userBook := range userBookmarks {
+		if game.ID == userBook.IdGame {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "This games already in your bookmark"})
+			return
+		}
 	}
 
 	var bookmark models.Bookmark
@@ -82,7 +95,7 @@ func AddGameToBookmark(c *gin.Context) {
 // @Security BearerToken
 // @Produce json
 // @Param id path string true "Bookmark Id"
-// @Success 200 {object} map[string]boolean
+// @Success 200 {object} map[string]string
 // @Router /users/bookmarks/{id} [delete]
 func DeleteBookmarkedGame(c *gin.Context) {
 	//check authorization
@@ -110,5 +123,5 @@ func DeleteBookmarkedGame(c *gin.Context) {
 
 	db.Delete(&bookmark)
 
-	c.JSON(http.StatusOK, gin.H{"data": true})
+	c.JSON(http.StatusOK, gin.H{"data": "Delete from bookmark success"})
 }
